--- a/templates/load_content.html
+++ b/templates/load_content.html
@@ -5,7 +5,7 @@
 {% endcomment %}
 
 function loadContent(target, url, selector) {
-  if (typeof calendar !== "undefined") {
+  if (typeof calendar !== "undefined" && calendar !== null) {
     calendarView = calendar.view.type;
     calendarDate = calendar.getDate();
     $(target).fadeOut("fast", function() {
@@ -15,9 +15,10 @@ function loadContent(target, url, selector) {
         success: function(data,status,jqXHR) {
             $(target).html($(data).find(selector).addBack(selector).children()).fadeIn("fast");
             montar_calendario(calendarView, calendarDate);
+            {% include "linguas_ajax.html" %}
         }
       });
-    });
+    }); 
   }
 }
 
