mostrando que o endereço não foi definido

--- a/templates/organizacao.html
+++ b/templates/organizacao.html
@@ -126,7 +126,7 @@
         {{proposta.organizacao.endereco|linebreaks}}
       </a>
     {% else %}
-      <u>não definido.</u>
+      <strong>Endereço:</strong> <u>não definido</u>
     {% endif %}
     <br>
   </p>
