--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -76,7 +76,6 @@
 
   {% include "edicoes.html" %}
 
-  
   <div class="atualizar">
 
     <script>
@@ -88,20 +87,32 @@
       <table id="PropostasTable" class="table table-bordered table-hover table-sm" style="width: 100%;">
         <thead class="table-info">
           <tr>
-            <th scope="col" class="estados text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Algum professor do comitê analisou que a proposta seja publicada para os estudantes"><span id="autorizado-icon"></span></th>
-            <th scope="col" class="estados text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Proposta ficará disponível para estudantes na fase onde eles deverão selecionar interesse"><span id="disponivel-icon"></span></th>
-            <th scope="col" class="estados text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Foi formado um grupo de estudantes para essa proposta de projeto"><span id="fechado-icon"></span></th>
-            <th scope="col" class="text-center">Proposta</th>
-            {% if edicao == "todas" %}
-              <th scope="col" class="periodo text-center">Período</th>
-            {% endif %}
-            <th scope="col" class="text-center organizacao">Organização</th>
-            <th scope="col" class="text-center" style="font-size: 12px;">Tipo</th>
-            <th scope="col" class="estudantes text-center" style="font-size: 12px;"><span class="estudante-icon"></span>1</th>
-            <th scope="col" class="estudantes text-center" style="font-size: 12px;"><span class="estudante-icon"></span>2</th>
-            <th scope="col" class="estudantes text-center" style="font-size: 12px;"><span class="estudante-icon"></span>3</th>
-            <th scope="col" class="estudantes text-center" style="font-size: 12px;"><span class="estudante-icon"></span>4</th>
-            <th scope="col" class="text-center" style="font-size: 12px;">Disciplinas Recomendadas</th>
+            <th scope="col" class="estados text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Algum professor do comitê analisou que a proposta seja publicada para os estudantes" 
+            {% comment %} data-lang-pt="Analisada" data-lang-en="Analyzed" {% endcomment %}
+            ><span id="autorizado-icon"></span></th>
+            <th scope="col" class="estados text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Proposta ficará disponível para estudantes na fase onde eles deverão selecionar interesse"
+             {% comment %} data-lang-pt="Disponível" data-lang-en="Available" {% endcomment %}
+            ><span id="disponivel-icon"></span></th>
+            <th scope="col" class="estados text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Foi formado um grupo de estudantes para essa proposta de projeto"
+             {% comment %} data-lang-pt="Fechada" data-lang-en="Confirmed" {% endcomment %}
+            ><span id="fechado-icon"></span></th>
+            <th scope="col" class="text-center" data-lang-pt="Proposta" data-lang-en="Proposal">Proposta</th>
+            <th scope="col" class="periodo text-center" data-lang-pt="Período" data-lang-en="Semester">Período</th>
+            <th scope="col" class="text-center organizacao" data-lang-pt="Organização" data-lang-en="Organization">Organização</th>
+            <th scope="col" class="text-center" style="font-size: 12px;" data-lang-pt="Tipo" data-lang-en="Type">Tipo</th>
+            <th scope="col" class="estudantes text-center" style="font-size: 12px;" 
+             {% comment %} data-lang-pt="Estudante1" data-lang-en="Student1" {% endcomment %}
+             ><span class="estudante-icon"></span>1</th>
+            <th scope="col" class="estudantes text-center" style="font-size: 12px;" 
+             {% comment %} data-lang-pt="Estudante2" data-lang-en="Student2" {% endcomment %}
+             ><span class="estudante-icon"></span>2</th>
+            <th scope="col" class="estudantes text-center" style="font-size: 12px;" 
+             {% comment %} data-lang-pt="Estudante3" data-lang-en="Student3" {% endcomment %}
+             ><span class="estudante-icon"></span>3</th>
+            <th scope="col" class="estudantes text-center" style="font-size: 12px;"
+             {% comment %} data-lang-pt="Estudante4" data-lang-en="Student4" {% endcomment %}
+             ><span class="estudante-icon"></span>4</th>
+            <th scope="col" class="text-center" style="font-size: 12px;" data-lang-pt="Disciplinas Recomendadas" data-lang-en="Recommended Courses">Disciplinas Recomendadas</th>
           </tr>
         </thead>
         <tbody>
@@ -111,7 +122,6 @@
           
             <tr class="item"> 
 
-              
               <td style="cursor:pointer;" class="fcol estados
               {% if proposta.autorizado  %}
                 text-success" 
@@ -152,10 +162,8 @@
                 </a>
               </th>
 
-              {% if edicao == "todas" %}
-                <td class="text-center periodo">{{proposta.ano}}.{{proposta.semestre}}</td>
-              {% endif %}
-
+              <td class="text-center periodo">{{proposta.ano}}.{{proposta.semestre}}</td>
+              
               <td class="organizacao">
                 <div id="proposta{{proposta.id}}" style="float:left;width: 85%;">
                   {% if proposta.organizacao %}
@@ -183,8 +191,8 @@
 
               {% spaceless %}
 
-              {% for perfil in proposta.perfis %}
-                {% with nativamente=proposta.get_nativamente %}
+              {% with nativamente=proposta.get_nativamente %}
+                {% for perfil in proposta.perfis %}
                   <td class="text-center estudantes">
                     {% for curso in perfil.all %}
                       <span {% if nativamente == curso %}style="font-weight: bold;"{% endif %}>{{curso.sigla_curta}} </span>
@@ -192,8 +200,8 @@
                       {% if disponivel %}<span style="color:red">?</span>{% endif %}
                     {% endfor %}
                   </td>
-                {% endwith %}
-              {% endfor %}
+                {% endfor %}
+              {% endwith %}
 
               <td style="font-size: 12px;">
                 <ul style="margin-bottom: 2px; padding-left: 16px;">
@@ -261,17 +269,35 @@
 
       <p>&nbsp;</p>
       <strong lang="pt">Vagas por curso</strong>
-      <strong lang="en">Seats per program</strong>
+      <strong lang="en">Positions per program</strong>
       <br>
       <table class="table-bordered table-sm">
         <thead class="table-info">
           <tr>
-            <th>Curso</th>
-            <th data-toggle="tooltip" data-html="true" animation="true" title="Vagas totais possíveis para estudantes">Vagas</th>
-            <th data-toggle="tooltip" data-html="true" animation="true" title="Vagas disponibilizadas para estudantes">V. Disp.</th>
-            <th data-toggle="tooltip" data-html="true" animation="true" title="Vagas totais proporcionais para estudantes">P. Vagas</th>
-            <th data-toggle="tooltip" data-html="true" animation="true" title="Vagas disponibilizadas proporcionais para estudantes">P. Disp.</th>
-            <th data-toggle="tooltip" data-html="true" animation="true" title="Total de vagas necessárias para o semestre">Neces.</th>
+            <th>
+              <span lang="pt">Curso</span>
+              <span lang="en">Program</span>
+            </th>
+            <th data-toggle="tooltip" data-html="true" animation="true" title="Vagas totais possíveis para estudantes">
+              <span lang="pt">Vagas</span>
+              <span lang="en">Slots</span>
+            </th>
+            <th data-toggle="tooltip" data-html="true" animation="true" title="Vagas disponibilizadas para estudantes">
+              <span lang="pt">V. Disp.</span>
+              <span lang="en">S. Avail.</span>
+            </th>
+            <th data-toggle="tooltip" data-html="true" animation="true" title="Vagas totais proporcionais para estudantes">
+              <span lang="pt">P. Vagas</span>
+              <span lang="en">P. Slots</span>
+            </th>
+            <th data-toggle="tooltip" data-html="true" animation="true" title="Vagas disponibilizadas proporcionais para estudantes">
+              <span lang="pt">P. Disp.</span>
+              <span lang="en">P. Avail.</span>
+            </th>
+            <th data-toggle="tooltip" data-html="true" animation="true" title="Total de vagas necessárias para o semestre">
+              <span lang="pt">Neces.</span>
+              <span lang="en">Requi.</span>
+            </th>
           </tr>
         </thead>
         <tbody>
@@ -327,7 +353,16 @@
     {% include "organizacao-modal.html" %}
 
     <script>
-      function carrega_pagina() {};
+      function carrega_pagina() {
+        {% if edicao != "todas" %}
+          if($("#PropostasTable th").length > 0) {   // Verifica se os THs foram registrados primeiro
+            table = $("#PropostasTable").dataTable();
+            if(table) {
+              table.fnSetColumnVis( 4, false );  // esconde Edição
+            }
+          }
+        {% endif %}
+      };
       window.onload = carrega_pagina
     </script>
 
