--- a/templates/propostas_nativamente.html
+++ b/templates/propostas_nativamente.html
@@ -4,19 +4,25 @@
   Data: 15 de Novembro de 2020
 {% endcomment %}
 
-
-&nbsp;&nbsp;nativamente multidisciplinar: {{disponivel_multidisciplinar.0}}
-{% if nao_disponivel %}
-<a data-toggle="tooltip" data-html="true" animation="true" title="Contando propostas que a organização desistiua após pubicação ou que não foram aprovados pelo comitê do Capstone.">
-  ({{disponivel_multidisciplinar.1}})
-</a>
-{% endif %}<br>
-{% for key, value in disponivel_propostas.items %} {% if value.1 > 0 %}
-  &nbsp;&nbsp;nativamente de {{key.nome}}: {{value.0}}
+<span style="margin-left: 10px;">
+  <span lang="pt">nativamente multidisciplinar: </span>
+  <span lang="en" style="display: none;">multidisciplinary natively: </span>
+  {{disponivel_multidisciplinar.0}}
   {% if nao_disponivel %}
   <a data-toggle="tooltip" data-html="true" animation="true" title="Contando propostas que a organização desistiua após pubicação ou que não foram aprovados pelo comitê do Capstone.">
-    ({{value.1}})
+    ({{disponivel_multidisciplinar.1}})
   </a>
   {% endif %}
-  <br>
-  {% endif %} {% endfor %} 
+</span><br>
+{% for key, value in disponivel_propostas.items %} {% if value.1 > 0 %}
+  <span style="margin-left: 10px;">
+    <span lang="pt">nativamente de </span>
+    <span lang="en" style="display: none;">natively in </span>
+    {{key.nome}}: {{value.0}}
+    {% if nao_disponivel %}
+    <a data-toggle="tooltip" data-html="true" animation="true" title="Contando propostas que a organização desistiua após pubicação ou que não foram aprovados pelo comitê do Capstone.">
+      ({{value.1}})
+    </a>
+    {% endif %}
+  </span><br>
+{% endif %} {% endfor %} 
